--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,6 +11,9 @@ flask-sqlalchemy = "*"
 importlib-metadata = "6.0.0"
 sqlalchemy-serializer = "1.4.1"
 flask-cors = "3.0.10"
+marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+flask-marshmallow = "*"
 
 [dev-packages]
 
